// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot in english  1`] = `
<div>
  <div
    class="RenderAbout"
  >
    <section
      class=" show-on-smallest-screen-only"
    >
      <ul>
        <li>
          <a
            href="https://github.com/hugCarvalho"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </li>
        <li>
          <a
            href="https://www.linkedin.com/in/hugo-carvalho-8355b31b7/"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
        </li>
        <li>
          <a
            href="https://edabit.com/user/8Z3dkvWBqtrMEE48N"
            rel="noopener noreferrer"
            target="_blank"
          >
            Edabit
          </a>
        </li>
      </ul>
    </section>
    <div
      class="wrapper__about"
    >
      <main>
        <article>
          <h2>
            Basic Introduction
          </h2>
          <p>
            Hi, I'm Hugo, a self-taught and highly motivated programmer, who is changing careers after having discovered his passion in programming.
          </p>
          <p>
            Hugo is a fast and methodical learner and brings the latest standards from the technologies learned. Currently he's focusing on 
            <s>
              Testing
            </s>
             Node.js.
          </p>
          <p>
            He is also eager to be part of a team, to contribute and help shaping high quality products that will impact positively people’s lives.
          </p>
          <p>
            If you'd like to know more, just keep reading...
          </p>
        </article>
      </main>
      <section>
        <article>
          <h2>
            Extended Introduction
          </h2>
          <ol>
            <li>
              1.
               
              <a
                href="/#knowledge"
              >
                Where does my knowledge come from?
              </a>
            </li>
            <li>
              2.
               
              <a
                href="/#challenges"
              >
                How do I improve my problem solving skills?
              </a>
            </li>
            <li>
              3.
               
              <a
                href="/#study"
              >
                What did I study?
              </a>
            </li>
            <li>
              4.
               
              <a
                href="/#hobbies"
              >
                What are my main hobbies?
              </a>
            </li>
          </ol>
          <h4
            id="knowledge"
          >
            Where does my knowledge come from?
          </h4>
          <p>
            Although I have read some books about JavaScript, most of my knowledge derives from online resources.
          </p>
          <p>
            For a more structured approach, I enrolled in numerous online courses on
             
            <cite>
              Udemy.com
            </cite>
            ,
             
            <em>
              making sure I got my knowledge from diversified sources
            </em>
            , which also allowed me to assess the quality of what I was learning.
          </p>
          <p>
            Presently, I'm enrolled in Kent C. Dodds 21 hours workshop,
             
            <cite>
              Epic React
            </cite>
            .
          </p>
          <p>
            At the end, you can find a
             
            <a
              href="/#resources"
            >
              list of the mentioned resources
            </a>
            .
          </p>
          <h4
            id="challenges"
          >
            How do I improve my problem solving skills?
          </h4>
          <p>
            In addition to developing whole projects like those you have as reference on this website, I also enjoy solving coding challenges on a regular basis, mainly in
             
            <a
              href="https://edabit.com/user/8Z3dkvWBqtrMEE48N"
              rel="noopener noreferrer"
              target="_blank"
              title="My Edabit userpage"
            >
              <cite>
                Edabit
              </cite>
               (currently at level 
              17
              , with 
              9155
               
              points and 
              5700
               reputation points)
            </a>
            , and sporadically in 
            <cite>
              CheckiO
            </cite>
             (currently at level 
            8
            ) to improve my problem solving skills. This is also helpful in discovering new approaches from more experienced users and to compare code for a better performant solution.
          </p>
          <p>
            Recently,
             
            <a
              href="https://edabit.com/user/8Z3dkvWBqtrMEE48N"
              rel="noopener noreferrer"
              target="_blank"
              title="My Edabit userpage"
            >
               
              I started creating challenges in 
              <cite>
                Edabit
              </cite>
               
            </a>
            . This is helpful to develop my testing skills in unit testing and I get to contribute to the community as well.
          </p>
          <h4
            id="study"
          >
            What did I study?
          </h4>
          <p>
            I studied Sociology. Technically doesn't contribute much to this area, but the evaluation system was based on projects, there were no exams. These projects were mainly developed in a team, usually 3-5 people, with the exception of the last year, which consisted on a solo project. This resulted in four years of multiple teamwork experiences with different people, which helped to lay the foundations of working collaborative in a harmonious way.
          </p>
          <h4
            id="hobbies"
          >
            What are my main hobbies?
          </h4>
          <p>
            Apart from programming, I enjoy playing boardgames, doing sport like biking, going to the fitness studio or sport activities in the park. I also enjoy spending time with my girlfriend - failing to mention her, could potentially damage the relationship. And me... ;-)
          </p>
        </article>
      </section>
      <section>
        <div>
          <article>
            <h5
              id="resources"
            >
              List of books and courses read or taken: (Youtube tutorials are not included here)
            </h5>
            <p>
              Books
            </p>
            <ul>
              <li>
                <cite>
                  JavaScript, The Good Parts
                </cite>
                , 
                Douglas Crockford
              </li>
              <li>
                <cite>
                  Modern Javascript Tutorial
                </cite>
                , 
                Ilya Kantor
              </li>
            </ul>
            <p>
              Finished Online courses:
            </p>
            <ul>
              <li>
                <i>
                  JavaScript, Understanding the Weird Parts
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  11,5
                   hours)
                </span>
                , 
                Anthony Alicea
              </li>
              <li>
                <i>
                  The modern JavaScript BootCamp
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  29,5
                   hours)
                </span>
                , 
                Andrew Mead 
              </li>
              <li>
                <i>
                  Modern JavaScript from the beginning
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  21,5
                   hours)
                </span>
                , 
                Brad Traversy 
              </li>
              <li>
                <i>
                  JavaScript, The Advanced Concepts
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  25
                   hours)
                </span>
                , 
                Andrei Neagoie
              </li>
              <li>
                <i>
                  Web Design for Web Developers
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  3
                   hours)
                </span>
                , 
                Jonas Schmedtmann 
              </li>
              <li>
                <i>
                  Advanced CSS and SASS
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  28
                   hours)
                </span>
                , 
                Jonas Schmedtmann
              </li>
              <li>
                <i>
                  React- The Complete Guide (incl Hooks, ReactRouter, Redux)
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  40,5
                   hours)
                </span>
                , 
                Maximilian Schwarzmüller 
              </li>
              <li>
                <i>
                  React, NodeJS, Express & MongoDB - The MERN fullstack
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  19
                   hours)
                </span>
                , 
                Maximilian Schwarzmüller 
              </li>
            </ul>
            <p>
              Ongoing Online courses:
            </p>
            <ul>
              <li>
                <cite>
                  JavaScript 2020 build 55+ Real Projects
                </cite>
                 
                <span
                  class="course-duration"
                >
                  (
                  50
                   hours)
                </span>
                , 
                Laurence Svekis
              </li>
              <li>
                <cite>
                  CSS: The complete Guide 2020
                </cite>
                 
                <span
                  class="course-duration"
                >
                  (
                  20
                   hours)
                </span>
                , 
                Maximilian Schwarzmüller 
              </li>
              <li>
                <cite>
                  Epic React
                </cite>
                 
                <span
                  class="course-duration"
                >
                  (
                  21
                   hours)
                </span>
                , 
                Kent C. Dodds
              </li>
            </ul>
          </article>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`should match snapshot in german  1`] = `
<div>
  <div
    class="RenderAbout"
  >
    <section
      class=" show-on-smallest-screen-only"
    >
      <ul>
        <li>
          <a
            href="https://github.com/hugCarvalho"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </li>
        <li>
          <a
            href="https://www.linkedin.com/in/hugo-carvalho-8355b31b7/"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
        </li>
        <li>
          <a
            href="https://edabit.com/user/8Z3dkvWBqtrMEE48N"
            rel="noopener noreferrer"
            target="_blank"
          >
            Edabit
          </a>
        </li>
      </ul>
    </section>
    <div
      class="wrapper__about"
    >
      <main>
        <article
          lang="de"
        >
          <h2>
            Allgemeine Vorstellung
          </h2>
          <p>
            Hallo, ich bin Hugo, ein autodidaktischer und wissbegierig Webentwickler mit einem Master in Soziologie. Vor anderthalb Jahren begann ich parallel zu meinem Job das Programmieren mit JavaScript zu lernen. Es begann aus Neugier, dauerte aber nicht lange bevor es zu einer Leidenschaft wurde. Vor kurzem habe ich beschlossen, meinen Job zu kündigen, um diese Leidenschaft zu verfolgen und mir vermehrt neues Wissen anzueignen.
          </p>
          <p>
            Ich bin bestrebt, mir neue Fähigkeiten anzueignen, lerne aktiv (zurzeit
             
            <s>
              Testing
            </s>
             Node.js) und bin mit Begeisterung dabei.
          </p>
          <p>
            Neben meinen Fähigkeiten und meinem Selbstvertrauen, wächst auch der Wunsch wieder in einem Team zu arbeiten um gemeinsame Ziele zu verfolgen, welche einen positiven Einfluss auf die Kunden und das Unternehmen haben. Die Zusammenarbeit im Team würde sich ebenfalls fördernd auf meine Lernkurve auswirken und mich sehr motivieren.
          </p>
          <p>
            Wenn Sie mehr über mich erfahren möchten, lesen Sie einfach weiter...
          </p>
        </article>
      </main>
      <section>
        <article
          lang="de"
        >
          <h2>
            Weitere Informationen
          </h2>
          <ol>
            <li>
              1.
               
              <a
                href="/#knowledge"
              >
                Wie habe ich mir mein Wissen angeeignet?
              </a>
            </li>
            <li>
              2.
               
              <a
                href="/#challenges"
              >
                Wie verbessere ich meine Fähigkeiten zur Problemlösung?
              </a>
            </li>
            <li>
              3.
               
              <a
                href="/#study"
              >
                Was habe ich studiert?
              </a>
            </li>
            <li>
              4.
               
              <a
                href="/#hobbies"
              >
                Was sind meine Interessen?
              </a>
            </li>
          </ol>
          <h4
            id="knowledge"
          >
            Wie habe ich mir mein Wissen angeeignet?
          </h4>
          <p>
            Ich habe einige Bücher über JavaScript gelesen aber den Großteil meines Wissens habe ich mir aus Online-Ressourcen angeeignet. So konnte ich die Theorie direkt mit der Praxis verbinden.
          </p>
          <p>
            Für einen strukturierteren Ansatz habe ich mich bei verschiedenen Online-Kursen von Udemy.com eingeschrieben, um sicherzustellen, dass ich mein Wissen von verschiedenen Experten beziehe.
          </p>
          <p>
            Zurzeit bin ich in Kent C. Dodds 21-Stunden-Workshop 
            <cite>
              Epic React
            </cite>
             
            eingeschrieben.
          </p>
          <p>
            Am Ende der Seite finden Sie eine
             
            <a
              href="/#resources"
            >
               
              Liste der Ressourcen
               
            </a>
             
            
            in diesem Abschnitt erwähnt wurden.
          </p>
          <h4
            id="challenges"
          >
            Wie verbessere ich meine Fähigkeiten zur Problemlösung?
          </h4>
          <p>
            Neben der Entwicklung ganzer Projekte, wie Sie sie auf dieser Website als Referenz haben, macht es mir auch Spaß, regelmäßig Codierungsprobleme zu lösen. Hauptsächlich nutze ich
             
            <a
              href="https://edabit.com/user/8Z3dkvWBqtrMEE48N"
              rel="noopener noreferrer"
              target="_blank"
              title="My Edabit userpage"
            >
              <cite>
                 Edabit 
              </cite>
               (derzeit auf Stufe 
              17
              , mit 
              
              9155
               Punkte und 
              5700
               Reputation Punkte)
            </a>
             
            und vereinzelt auch 
            <cite>
               CheckiO 
            </cite>
             (derzeit auf Stufe 
            8
            ). Das ist auch eine gute Möglichkeit um neue Ansätze für ein gegebenes Problem zu entdecken und um Codes zu verbessern.
          </p>
          <p>
            Kürzlich habe ich damit begonnen, in
             
            <a
              href="https://edabit.com/user/8Z3dkvWBqtrMEE48N"
              rel="noopener noreferrer"
              target="_blank"
              title="My Edabit userpage"
            >
              Edabit Coding Challenges zu schaffen
               
            </a>
            . Dies ist hilfreich für die Entwicklung meiner Testfähigkeiten auf dem Gebiet der Einheitentests, und ich kann auch zur Gemeinschaft beitragen.
          </p>
          <h4
            id="study"
          >
            Was habe ich studiert?
          </h4>
          <p>
            Ich habe Soziologie studiert. Technisch gesehen, trägt es nicht all zu viel zum Bereich Webentwicklung bei, allerdings war der Ablauf des Studiums sehr projektorientiert angelegt, so dass ich in der Zeit schon Erfahrungen im Bereich Projektarbeit sammeln konnte. Diese Projekte wurden hauptsächlich in einem Team bearbeitet, normalerweise 3-5 Personen, mit Ausnahme des letzten Jahres, welches aus einem Soloprojekt bestand. Dies führte zu vier Jahren starker Teamarbeit, in denen ich viele Erfahrungen in der Zusammenarbeit mit verschiedenen Menschen sammeln konnte.
          </p>
          <h4
            id="hobbies"
          >
            Was sind meine Interessen?
          </h4>
          <p>
            Abgesehen vom Programmieren spiele ich gerne Brettstrategiespiele und bin sportlich aktiv (Radfahren, Fitness Studio oder sportliche Aktivitäten im Park).
          </p>
        </article>
      </section>
      <aside>
        <div>
          <article>
            <h5
              id="resources"
            >
              Liste der gelesenen Bücher und belegten Kurse: (Youtube-Tutorials nicht hier enthalten):
            </h5>
            <p>
              Bücher
            </p>
            <ul>
              <li>
                <cite>
                  JavaScript, The Good Parts
                </cite>
                , 
                Douglas Crockford
              </li>
              <li>
                <cite>
                  Modern Javascript Tutorial
                </cite>
                , 
                Ilya Kantor
              </li>
            </ul>
            <p>
              Abgeschlossene Online-Kurse:
            </p>
            <ul>
              <li>
                <i>
                  JavaScript, Understanding the Weird Parts
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  11,5
                   hours)
                </span>
                , 
                Anthony Alicea
              </li>
              <li>
                <i>
                  The modern JavaScript BootCamp
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  29,5
                   hours)
                </span>
                , 
                Andrew Mead 
              </li>
              <li>
                <i>
                  Modern JavaScript from the beginning
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  21,5
                   hours)
                </span>
                , 
                Brad Traversy 
              </li>
              <li>
                <i>
                  JavaScript, The Advanced Concepts
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  25
                   hours)
                </span>
                , 
                Andrei Neagoie
              </li>
              <li>
                <i>
                  Web Design for Web Developers
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  3
                   hours)
                </span>
                , 
                Jonas Schmedtmann 
              </li>
              <li>
                <i>
                  Advanced CSS and SASS
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  28
                   hours)
                </span>
                , 
                Jonas Schmedtmann
              </li>
              <li>
                <i>
                  React- The Complete Guide (incl Hooks, ReactRouter, Redux)
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  40,5
                   hours)
                </span>
                , 
                Maximilian Schwarzmüller 
              </li>
              <li>
                <i>
                  React, NodeJS, Express & MongoDB - The MERN fullstack
                </i>
                 
                <span
                  class="course-duration"
                >
                  (
                  19
                   hours)
                </span>
                , 
                Maximilian Schwarzmüller 
              </li>
            </ul>
            <p>
              Laufende Online-Kurse:
            </p>
            <ul>
              <li>
                <cite>
                  JavaScript 2020 build 55+ Real Projects
                </cite>
                 
                <span
                  class="course-duration"
                >
                  (
                  50
                   hours)
                </span>
                , 
                Laurence Svekis
              </li>
              <li>
                <cite>
                  CSS: The complete Guide 2020
                </cite>
                 
                <span
                  class="course-duration"
                >
                  (
                  20
                   hours)
                </span>
                , 
                Maximilian Schwarzmüller 
              </li>
              <li>
                <cite>
                  Epic React
                </cite>
                 
                <span
                  class="course-duration"
                >
                  (
                  21
                   hours)
                </span>
                , 
                Kent C. Dodds
              </li>
            </ul>
          </article>
        </div>
      </aside>
    </div>
  </div>
</div>
`;
